Styled Landing and added spinner cmp.

--- a/client/src/_main.scss
+++ b/client/src/_main.scss
@@ -21,8 +21,12 @@ body {
 }
 
 .Form {
-  min-height: 200px;
+  min-height: 300px;
   min-width: 300px;
+}
+
+.Label {
+  width: 40%;
 }
 
 @mixin flex-row {
