Cleaned up navbar. Added table for Dashbaord.

--- a/client/src/_main.scss
+++ b/client/src/_main.scss
@@ -5,7 +5,7 @@ $light-black: #342e37;
 $green: #a2d729;
 $dark-white: #fafffd;
 $orange: #fa824c;
-
+$light-grey: #c5c3c3;
 * {
   box-sizing: border-box;
 }
